@@ -440,7 +440,7 @@
       <dependency>
         <groupId>com.carrotsearch.randomizedtesting</groupId>
         <artifactId>randomizedtesting-runner</artifactId>
-        <version>2.0.7</version>
+        <version>2.0.8</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
